Worked on camera

--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -117,7 +117,7 @@
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Distance [mm]"/>
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Position [mm]"/>
                     <common:MvtNumBox    Grid.Row="0" Grid.Column="1" x:Name="MoveDist"/>
 
                     <Grid Grid.Row="4" Grid.ColumnSpan="2">
@@ -150,7 +150,7 @@
                         <RowDefinition Height="auto"/>
                     </Grid.RowDefinitions>
                     
-                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Dist"/>
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Dist [mm]"/>
                     <common:MvtNumBox    Grid.Row="0" Grid.Column="1" Text="{Binding WebDist}"/>
 
                     <Grid Grid.Row="2" Grid.ColumnSpan="2">
