--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -29,13 +29,16 @@
                 <TextBlock Text="Ref" Foreground="White"/>
             </common:MvtButton>
 
-            <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Start_Clicked" Margin="15, 5, 15, 5" >
+            <common:MvtButton x:Name="StartButton" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Start_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Start" Foreground="White"/>
             </common:MvtButton>
 
+            <!--
             <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Done_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Done" Foreground="White"/>
             </common:MvtButton>
+            
+            -->
         </StackPanel>
 
         <Grid Grid.Row="2">
