--- a/mvt_digiprint_gui/Views/UserControls/FlushWindow.xaml
+++ b/mvt_digiprint_gui/Views/UserControls/FlushWindow.xaml
@@ -6,7 +6,7 @@
         Title="Flushing"
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
-        Height="300" 
+        Height="350" 
         Width="300">
     
     <Grid>
@@ -23,6 +23,8 @@
             <Button Style="{StaticResource Mouvent.StandardButton}" Content="Weekend"   Click="Weekend_Clicked"
                     Width="170" Height="30" Margin="10"/>
             <Button Style="{StaticResource Mouvent.StandardButton}" Content="Week"      Click="Week_Clicked"
+                    Width="170" Height="30" Margin="10"/>
+            <Button Style="{StaticResource Mouvent.StandardButton}" Content="Cap"      Click="Yes_Clicked"
                     Width="170" Height="30" Margin="10"/>
         </StackPanel>
 
