--- a/mvt_digiprint_gui/Views/AlignmentView/RobotHeadAdjustmentView.xaml
+++ b/mvt_digiprint_gui/Views/AlignmentView/RobotHeadAdjustmentView.xaml
@@ -30,7 +30,7 @@
                     <RowDefinition Height="auto"/>
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="0">
+                <Grid Grid.Row="0" Height="220" VerticalAlignment="Top">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto"/>
@@ -58,8 +58,14 @@
                     <common:MvtNumBox  Grid.Row="2" Grid.Column="1" Margin="5" Text="{Binding HeadNo}"></common:MvtNumBox>
                     <common:MvtNumBox Grid.Row="4" Grid.Column="1" Margin="5" Text="{Binding Axis}"></common:MvtNumBox>
                     <common:MvtNumBox  Grid.Row="6" Grid.Column="1" Margin="5" Text="{Binding Steps}"></common:MvtNumBox>
-                    <TextBlock Grid.Row="0" Grid.Column="2" Margin="10">0 to 3</TextBlock>
-                    <TextBlock Grid.Row="2" Grid.Column="2" Margin="10">-1 to 7</TextBlock>
+                    <StackPanel Margin="10" Grid.Row="0" Grid.Column="2" Orientation="Horizontal" x:Name="ColorCnt">
+                        <TextBlock Text="0 to "/>
+                        <TextBlock Text="{Binding ColorCnt, Converter={StaticResource Add_Converter}, ConverterParameter=-1}"/>
+                    </StackPanel>
+                    <StackPanel Margin="10" Grid.Row="2" Grid.Column="2" Orientation="Horizontal" x:Name="HeadsPerColor">
+                        <TextBlock Text="-1 to "/>
+                        <TextBlock Text="{Binding HeadsPerColor, Converter={StaticResource Add_Converter}, ConverterParameter=-1}"/>
+                    </StackPanel>
                     <TextBlock Grid.Row="4" Grid.Column="2" Margin="10">0 = Angle, 1 = Stitch</TextBlock>
                     <TextBlock Grid.Row="6" Grid.Column="2" Margin="10">In Turns</TextBlock>
                     <!--
@@ -84,13 +90,21 @@
                             <ColumnDefinition  Width="auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <common:MvtButton Margin="10,0,10,0" Visibility="{Binding Done, Converter={StaticResource BoolToInVisible_Converter}}"
+                        <!--<common:MvtButton Margin="10,0,10,0" <Visibility="{Binding Done, Converter={StaticResource BoolToInVisible_Converter}}"
                                   ToolTip="Adjust"
                           Click="Adjust_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}">
                             <iconPacks:PackIconMaterial VerticalAlignment="Center" HorizontalAlignment="Center"
                                             Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="20" Height="20" 
                                                 Kind="RobotIndustrial"></iconPacks:PackIconMaterial>
+                        </common:MvtButton>-->
+
+                        <common:MvtButton Margin="10,0,10,0" ToolTip="Adjust"
+                          Click="Adjust_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}">
+                            <iconPacks:PackIconMaterial VerticalAlignment="Center" HorizontalAlignment="Center"
+                                            Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="20" Height="20" 
+                                                Kind="RobotIndustrial"></iconPacks:PackIconMaterial>
                         </common:MvtButton>
+
                         <common:MvtButton Margin="10,0,10,0" Visibility="{Binding Done, Converter={StaticResource BoolToVisible_Converter}}"
                                   ToolTip="Done"
                           Click="Done_Clicked" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}">
