--- a/mvt_digiprint_gui/Views/SetupAssistView/SA_CamCapture.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SA_CamCapture.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,5">
+        <StackPanel Visibility="Collapsed" Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,5">
             <TextBlock Text="View " VerticalAlignment="Center"/>
             <rx:RxComboBox  Grid.Row="0" Grid.Column="1" Width="150" x:Name="CB_View" SelectionChanged="CB_View_SelectionChanged" VerticalAlignment="Center"/>
         </StackPanel>
@@ -45,7 +45,7 @@
             </StackPanel>
         </GroupBox>
 
-        <Grid Grid.Row="2" x:Name="ThresholdGrid">
+        <Grid Visibility="Collapsed" Grid.Row="2" x:Name="ThresholdGrid">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
