--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -82,16 +82,9 @@
                     <TextBlock  Grid.Row="4" Grid.Column="0" Text="Reference Done"/>
                     <CheckBox   Grid.Row="4" Grid.Column="1" IsChecked="{Binding ScanRefDone}" IsEnabled="False" HorizontalAlignment="Center"/>
 
-                    <TextBlock  Grid.Row="5" Grid.Column="0" Text="moving"/>
-                    <CheckBox   Grid.Row="5" Grid.Column="1" IsChecked="{Binding ScanMoving}" IsEnabled="False" HorizontalAlignment="Center"/>
-
                     <TextBlock  Grid.Row="6" Grid.Column="0" Text="Stop Left"/>
                     <Image Grid.Row="6" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREEN.ico" Visibility="{Binding ScanInLeft,   Converter={StaticResource BoolToVisible_Converter}}" Width="16"/>
                     <Image Grid.Row="6" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREY.ico"  Visibility="{Binding ScanInLeft,   Converter={StaticResource BoolToInVisible_Converter}}" Width="16"/>
-
-                    <TextBlock  Grid.Row="7" Grid.Column="0" Text="Stop Right"/>
-                    <Image Grid.Row="7" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREEN.ico" Visibility="{Binding ScanInRight,   Converter={StaticResource BoolToVisible_Converter}}" Width="16"/>
-                    <Image Grid.Row="7" Grid.Column="1" Source="../../Resources/Bitmaps/LED_GREY.ico"  Visibility="{Binding ScanInRight,   Converter={StaticResource BoolToInVisible_Converter}}" Width="16"/>
 
                     <TextBlock Grid.RowSpan="10" Grid.ColumnSpan="10" Text="NOT CONNECTED" Foreground="Red" FontSize="20" RenderTransformOrigin="0.5,0.5" 
                            HorizontalAlignment="Center" 
@@ -104,7 +97,7 @@
                 </Grid>
             </GroupBox>
 
-            <GroupBox Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Move" Style="{StaticResource MvtGroupBox}" Margin="5,0">
+            <GroupBox Visibility="Collapsed" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Move" Style="{StaticResource MvtGroupBox}" Margin="5,0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150"/>
@@ -140,7 +133,7 @@
                 </Grid>
             </GroupBox>
 
-            <GroupBox Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Web" Style="{StaticResource MvtGroupBox}">
+            <GroupBox Visibility="Collapsed" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Web" Style="{StaticResource MvtGroupBox}">
                 <Grid >
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150"/>
@@ -171,28 +164,6 @@
 
                 </Grid>
             </GroupBox>
-
-            <GroupBox Grid.Column="3" x:Name="Robot" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Robot" Style="{StaticResource MvtGroupBox}">
-                <Grid x:Name="StepperGrid">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="auto" MinWidth="50"/>
-                        <ColumnDefinition Width="auto" MinWidth="50"/>
-                        <ColumnDefinition Width="auto" MinWidth="50"/>
-                        <ColumnDefinition Width="auto" MinWidth="50"/>
-                    </Grid.ColumnDefinitions>
-  
-
-                </Grid>
-            </GroupBox>
-
         </Grid>
 
         <!--- GRID:ROW 3 ___________________________________________________________________________________________________________________-->
