--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -41,13 +41,99 @@
 
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="142"/>
+                <ColumnDefinition Width="71"/>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="auto"/>
             </Grid.ColumnDefinitions>
 
-            <GroupBox Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Status" Style="{StaticResource MvtGroupBox}">
+            <GroupBox Visibility="Collapsed" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Move" Style="{StaticResource MvtGroupBox}" Margin="0,0,1,0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Position [mm]"/>
+                    <common:MvtNumBox    Grid.Row="0" Grid.Column="1" x:Name="MoveDist"/>
+
+                    <Grid Grid.Row="4" Grid.ColumnSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="3*"/>
+                            <ColumnDefinition Width="7*"/>
+                            <ColumnDefinition Width="10*"/>
+                        </Grid.ColumnDefinitions>
+                        <common:MvtButton Grid.Column="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="Move_Clicked" Margin="15, 5" Grid.ColumnSpan="2" >
+                            <TextBlock Text="Move"/>
+                        </common:MvtButton>
+                        <common:MvtButton Grid.Column="2" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="Stop_Clicked" Margin="15, 5" >
+                            <TextBlock Text="Stop"/>
+                        </common:MvtButton>
+
+                    </Grid>
+
+                </Grid>
+            </GroupBox>
+
+            <GroupBox Visibility="Collapsed" Grid.Column="3" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Web" Style="{StaticResource MvtGroupBox}" Margin="0,0,1,0">
+                <Grid >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="50"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
+                        <RowDefinition Height="auto"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Dist [mm]"/>
+                    <common:MvtNumBox    Grid.Row="0" Grid.Column="1" Text="{Binding WebDist}"/>
+
+                    <Grid Grid.Row="2" Grid.ColumnSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <common:MvtButton Grid.Column="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="WebMove_Clicked" Margin="15, 5" >
+                            <TextBlock Text="Move"/>
+                        </common:MvtButton>
+                        <common:MvtButton Grid.Column="1" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="WebStop_Clicked" Margin="15, 5" >
+                            <TextBlock Text="Stop"/>
+                        </common:MvtButton>
+
+                    </Grid>
+
+                </Grid>
+            </GroupBox>
+        </Grid>
+
+        <!--- GRID:ROW 3 ___________________________________________________________________________________________________________________-->
+        <Grid Grid.Row="3">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+
+            <!--- camara capture _______________________________________________________________-->
+            <GroupBox  Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="700" Header="Camera Capture" Style="{StaticResource MvtGroupBox}" >
+                <local:SA_CamCapture x:Name="CamCapture" IsVisibleChanged="CamCapture_IsVisibleChanged"/>
+            </GroupBox>
+            
+            <GroupBox Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="auto" Header="Status" Style="{StaticResource MvtGroupBox}" Grid.ColumnSpan="2" Margin="0,0,1,0">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="150"/>
@@ -97,93 +183,19 @@
                 </Grid>
             </GroupBox>
 
-            <GroupBox Visibility="Collapsed" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Move" Style="{StaticResource MvtGroupBox}" Margin="5,0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="50"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Position [mm]"/>
-                    <common:MvtNumBox    Grid.Row="0" Grid.Column="1" x:Name="MoveDist"/>
-
-                    <Grid Grid.Row="4" Grid.ColumnSpan="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="3*"/>
-                            <ColumnDefinition Width="7*"/>
-                            <ColumnDefinition Width="10*"/>
-                        </Grid.ColumnDefinitions>
-                        <common:MvtButton Grid.Column="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="Move_Clicked" Margin="15, 5" Grid.ColumnSpan="2" >
-                            <TextBlock Text="Move"/>
-                        </common:MvtButton>
-                        <common:MvtButton Grid.Column="2" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="Stop_Clicked" Margin="15, 5" >
-                            <TextBlock Text="Stop"/>
-                        </common:MvtButton>
-
-                    </Grid>
-
-                </Grid>
-            </GroupBox>
-
-            <GroupBox Visibility="Collapsed" Grid.Column="2" HorizontalAlignment="Center" VerticalAlignment="Top" Width="auto" Header="Web" Style="{StaticResource MvtGroupBox}">
-                <Grid >
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="50"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto"/>
-                        <RowDefinition Height="auto"/>
-                    </Grid.RowDefinitions>
-
-                    <TextBlock  Grid.Row="0" Grid.Column="0" Text="Dist [mm]"/>
-                    <common:MvtNumBox    Grid.Row="0" Grid.Column="1" Text="{Binding WebDist}"/>
-
-                    <Grid Grid.Row="2" Grid.ColumnSpan="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <common:MvtButton Grid.Column="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="WebMove_Clicked" Margin="15, 5" >
-                            <TextBlock Text="Move"/>
-                        </common:MvtButton>
-                        <common:MvtButton Grid.Column="1" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeL}" Click="WebStop_Clicked" Margin="15, 5" >
-                            <TextBlock Text="Stop"/>
-                        </common:MvtButton>
-
-                    </Grid>
-
-                </Grid>
-            </GroupBox>
-        </Grid>
-
-        <!--- GRID:ROW 3 ___________________________________________________________________________________________________________________-->
-        <Grid Grid.Row="3">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="auto"/>
-                <ColumnDefinition Width="auto"/>
-            </Grid.ColumnDefinitions>
-
-            <!--- camara capture _______________________________________________________________-->
-            <GroupBox  Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="700" Header="Camera Capture" Style="{StaticResource MvtGroupBox}" >
-                <local:SA_CamCapture x:Name="CamCapture" IsVisibleChanged="CamCapture_IsVisibleChanged"/>
-            </GroupBox>
-
-            <common:MvtButton HorizontalAlignment="Right" VerticalAlignment="top" Grid.Row="0" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeS}" Click="CamSettings_Clicked" x:Name="BTN_CamSettings">
+            <common:MvtButton x:Name="BTN_CamSettings"
+                              Grid.Row="0" 
+                              Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeS}" 
+                              HorizontalAlignment="Right" 
+                              VerticalAlignment="top" 
+                              Margin="0, -10"
+                              Click="CamSettings_Clicked" 
+                              >
                 <iconPacks:PackIconMaterial HorizontalAlignment="Stretch" VerticalAlignment="Center" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Kind="CogOutline" Foreground="DarkGray"/>
             </common:MvtButton>
 
             <local:SA_CamSettings x:Name="CamSettings" Grid.Column="1" Margin="5,0"/>
-            <local:SA_ActionsView x:Name="SetupActions" Grid.Column="1" Margin="5,0"/>
+            <local:SA_ActionsView x:Name="SetupActions" Grid.Column="1" Grid.RowSpan="2" Margin="5,0"/>
         </Grid>
     </Grid>
 </UserControl>
