--- a/mvt_digiprint_gui/Views/PrintSystemExtended/PrintHeadView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemExtended/PrintHeadView.xaml
@@ -153,7 +153,7 @@
                        Text="{Binding Valve, Converter={StaticResource HeadValve_Converter}}"/>
 
             <TextBlock Margin="0, 0, 5, 0" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="7" VerticalAlignment="Center" HorizontalAlignment="Center"
-                       Text="{Binding PrintingTime}"/>
+                       Text="{Binding CondPrintingTime}"/>
 
             <TextBlock Margin="0, 0, 5, 0" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="8" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <TextBlock.Text>
