--- a/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
+++ b/mvt_digiprint_gui/Views/PrintSystemView/InkSupplyView.xaml
@@ -267,7 +267,7 @@
                     <TextBlock Margin="0,0,2,0"  Text=")"/>
                 </StackPanel>
                 <TextBlock  Margin="0,0,2,0"  Grid.Row="5" HorizontalAlignment="Right" Text="{Binding BleedValve}" />
-                <TextBlock  Margin="0,0,2,0"  Grid.Row="6" HorizontalAlignment="Right" Text="{Binding AirCusionValve}" />
+                <TextBlock  Margin="0,0,2,0"  Grid.Row="6" HorizontalAlignment="Right" Text="{Binding AirValve}" />
             </Grid>
 
             <!-- NO Connection _______________________________________________________________________-->
