--- a/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
+++ b/mvt_digiprint_gui/Views/PrintQueueView/FileSettingsWeb.xaml
@@ -138,7 +138,7 @@
                     Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"
                 />
 
-                    <TextBlock Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{mvt:LocalizedBinding Orientation}" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
+                <TextBlock Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Text="{mvt:LocalizedBinding Orientation}" Visibility="{Binding Ripped, Converter={StaticResource IntToInVisible_Converter}}"/>
                 <igWPF:XamComboEditor Margin="0, 0, 0, 5" Grid.Row="1" Grid.Column="1" 
                     HorizontalAlignment="Stretch"
                     ItemsSource="{Binding OrientationList}"
@@ -150,7 +150,7 @@
                     >
                 </igWPF:XamComboEditor>
 
-                    <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 0, 0, 5" Text="{mvt:LocalizedBinding Speed}"/>
+                <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Margin="0, 0, 0, 5" Text="{mvt:LocalizedBinding Speed}"/>
                 <rx:RxComboBox x:Name="CB_Speed"
                     Grid.Row="2" Grid.Column="1"
                     SelectedValue="{Binding Speed}"
@@ -158,14 +158,17 @@
                     />
                 <TextBlock  Margin="5, 0, 0, 5" Grid.Row="2" Grid.Column="2" Text="m/min" x:Name="SpeedUnit"/>
 
-                    <TextBlock  Margin="0, 0, 0, 5"       Grid.Row="3" Grid.Column="0" Text="{mvt:LocalizedBinding ImageMargin}" />
-                <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5"   Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right"/>
-                <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal">
-                    <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
-                    <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
-                </StackPanel>
+                    <TextBlock  Margin="0, 0, 0, 5" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Text="{mvt:LocalizedBinding ImageMargin}" />
+                    <common:MvtNumBox  x:Name="RefNumBox" Margin="0, 0, 0, 5" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1" Text="{Binding PageMargin, Converter={StaticResource Len_Unit_Converter}, ConverterParameter=mm}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Right"/>
+                    <StackPanel Grid.Row="3" Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" >
+                        <TextBlock  Margin="5, 0, 5, 5" Text="mm"  x:Name="MarginUnit"/>
+                        <TextBlock  Text="&#x0081;" FontFamily="Wingdings" />
+                    </StackPanel>
+                    <common:MvtButton x:Name="Center" Margin="5, 0, 5, 5" VerticalAlignment="Center" Grid.Row="3" Grid.Column="3" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightBackgroundButton.SizeS}" HorizontalAlignment="Left" Click="Center_Clicked">
+                        <iconPacks:PackIconMaterial Margin="0,0,0,0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkIcon}" Width="20" Height="20" Kind="FormatVerticalAlignCenter"></iconPacks:PackIconMaterial>
+                    </common:MvtButton>
 
-                    <TextBlock Margin="0, 0, 5, 5" Grid.Row="4" Grid.Column="0" Text="{mvt:LocalizedBinding PrintGoMode}" VerticalAlignment="Center"/>
+                <TextBlock Margin="0, 0, 5, 5" Grid.Row="4" Grid.Column="0" Text="{mvt:LocalizedBinding PrintGoMode}" VerticalAlignment="Center"/>
                 <rx:RxComboBox Margin="0, 0, 0, 5" x:Name="CB_PrintGoMode"
                     Grid.Row="4" Grid.Column="1"
                     SelectedValue="{Binding PrintGoMode}"
