Setup Assist: Implemented first tests for I3Pro Spectro Photometer

--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -33,6 +33,10 @@
                 <TextBlock Text="Start" Foreground="White"/>
             </common:MvtButton>
 
+            <common:MvtButton x:Name="StartDensityButton" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="StartDensity_Clicked" Margin="15, 5, 15, 5" >
+                <TextBlock Text="Density" Foreground="White"/>
+            </common:MvtButton>
+
             <common:MvtButton x:Name="BTN_Continue" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Done_Clicked" IsChecked="{Binding CanContinue}" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Done" Foreground="White"/>
             </common:MvtButton>
@@ -105,7 +109,7 @@
             <GroupBox  Grid.Column="0" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Stretch" Width="700" Header="I1Pro3" Style="{StaticResource MvtGroupBox}" >
                 <StackPanel Orientation="Horizontal">
                     <Button Content="Connect"   Click="I1Pro3_Connect" Width="100" Margin="10"/>
-                    <Button x:Name="BTN_I1Pro3_Calibrate" Content="Calibrate" Click="I1Pro3_Calibrate" Width="100" Margin="10" IsEnabled="False"/>
+                    <Button x:Name="BTN_I1Pro3_Calibrate" Content="Calibrate" Click="I1Pro3_Calibrate" Width="100" Margin="10" IsEnabled="True"/>
                     <Button x:Name="BTN_I1Pro3_Measure"   Content="Measure"   Click="I1Pro3_Measure" Width="100" Margin="10" IsEnabled="False"/>
                     <Rectangle x:Name="ResultColor" Width="50" Height="50" Stroke="Black" StrokeThickness="1"/>
                     <TextBlock x:Name="ResultCMYK" Margin="10,0"/>
