--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -28,6 +28,12 @@
             <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Reference_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Ref" Foreground="White"/>
             </common:MvtButton>
+            <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Up_Clicked" Margin="15, 5, 15, 5" >
+                <TextBlock Text="Up" Foreground="White"/>
+            </common:MvtButton>
+            <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Down_Clicked" Margin="15, 5, 15, 5" >
+                <TextBlock Text="Down" Foreground="White"/>
+            </common:MvtButton>
 
             <common:MvtButton x:Name="StartButton" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Start_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Start" Foreground="White"/>
